[package]
name = "susyp2p-core"
edition = "2018"
description = "Core traits and structs of susyp2p"
version = "0.7.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
asn1_der = "0.6.1"
bs58 = "0.2.0"
bytes = "0.4"
ed25519-dalek = "1.0.0-pre.1"
failure = "0.1"
fnv = "1.0"
lazy_static = "1.2"
log = "0.4"
multiaddr = { package = "susy-multiaddr", version = "0.4.0", path = "../misc/multiaddr" }
multihash = { package = "susy-multihash", version = "0.1.0", path = "../misc/multihash" }
multistream-select = { version = "0.4.0", path = "../misc/multistream-select" }
futures = { version = "0.1", features = ["use_std"] }
parking_lot = "0.7"
protobuf = "2.3"
quick-error = "1.2"
rand = "0.6"
rw-stream-sink = { version = "0.1.1", path = "../misc/rw-stream-sink" }
secp256k1 = { version = "0.12", features = ["rand"], optional = true }
sha2 = "0.8.0"
smallvec = "0.6"
tokio-executor = "0.1.4"
tokio-io = "0.1"
tokio-timer = "0.2"
unsigned-varint = "0.2"
void = "1"
zeroize = "0.5"

[target.'cfg(not(any(target_os = "emscripten", target_os = "unknown")))'.dependencies]
ring = { version = "0.14", features = ["use_heap"], default-features = false }
untrusted = { version = "0.6" }

[dev-dependencies]
env_logger = "0.6"
susyp2p-ping = { version = "0.7.0", path = "../protocols/ping" }
susyp2p-tcp = { version = "0.7.0", path = "../transports/tcp" }
susyp2p-mplex = { version = "0.7.0", path = "../muxers/mplex" }
susyp2p-secio = { version = "0.7.0", path = "../protocols/secio" }
rand = "0.6"
quickcheck = "0.8"
tokio = "0.1"
tokio-codec = "0.1"
tokio-timer = "0.2"
assert_matches = "1.3"
tokio-mock-task = "0.1"

[features]
default = ["secp256k1"]
