[package]
name = "susyp2p-mdns"
edition = "2018"
version = "0.7.0"
description = "Implementation of the susyp2p mDNS discovery method"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
data-encoding = "2.0"
dns-parser = "0.8"
futures = "0.1"
susyp2p-core = { version = "0.7.0", path = "../../core" }
log = "0.4"
multiaddr = { package = "susy-multiaddr", version = "0.4.0", path = "../multiaddr" }
net2 = "0.2"
rand = "0.6"
smallvec = "0.6"
tokio-io = "0.1"
tokio-reactor = "0.1"
tokio-timer = "0.2"
tokio-udp = "0.1"
void = "1.0"

[dev-dependencies]
tokio = "0.1"
