[package]
name = "susy-multihash"
edition = "2018"
description = "Implementation of the multihash format"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["multihash", "ipfs"]
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "Susy Technologies <admin@superstring.ch>"]
license = "MIT"
documentation = "https://docs.rs/susy-multihash/"

[dependencies]
blake2 = { version = "0.8", default-features = false }
rand = { version = "0.6", default-features = false, features = ["std"] }
sha-1 = { version = "0.8", default-features = false }
sha2 = { version = "0.8", default-features = false }
sha3 = { version = "0.8", default-features = false }
unsigned-varint = "0.2"
