[package]
name = "multistream-select"
description = "Multistream-select negotiation protocol for susyp2p"
version = "0.4.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
bytes = "0.4"
futures = { version = "0.1" }
log = "0.4"
smallvec = "0.6"
tokio-codec = "0.1"
tokio-io = "0.1"
unsigned-varint = { version = "0.2.1", features = ["codec"] }

[dev-dependencies]
tokio = "0.1"
tokio-tcp = "0.1"
