[package]
name = "peer-id-generator"
edition = "2018"
version = "0.1.0"
description = "Generate peer ids that are prefixed with a specific string"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]
publish = false

[dependencies]
susyp2p-core = { version = "0.6.0", path = "../../core" }
susyp2p-secio = { version = "0.6.0", path = "../../protocols/secio" }
num_cpus = "1.8"
rand = "0.6"
