[package]
name = "susyp2p-mplex"
edition = "2018"
description = "Mplex multiplexing protocol for susyp2p"
version = "0.7.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
bytes = "0.4.5"
fnv = "1.0"
futures = "0.1"
susyp2p-core = { version = "0.7.0", path = "../../core" }
log = "0.4"
parking_lot = "0.7"
tokio-codec = "0.1"
tokio-io = "0.1"
unsigned-varint = { version = "0.2.1", features = ["codec"] }

[dev-dependencies]
susyp2p-tcp = { version = "0.7.0", path = "../../transports/tcp" }
tokio = "0.1"
