[package]
name = "susyp2p-yamux"
edition = "2018"
description = "Yamux multiplexing protocol for susyp2p"
version = "0.7.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
futures = "0.1"
susyp2p-core = { version = "0.7.0", path = "../../core" }
log = "0.4"
tokio-io = "0.1"
yamux = "0.2.0"
