[package]
name = "susyp2p-floodsub"
edition = "2018"
description = "Floodsub protocol for susyp2p"
version = "0.6.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
bs58 = "0.2.0"
bytes = "0.4"
cuckoofilter = "0.3.2"
fnv = "1.0"
futures = "0.1"
susyp2p-core = { version = "0.6.0", path = "../../core" }
protobuf = "2.3"
rand = "0.6"
smallvec = "0.6.5"
tokio-codec = "0.1"
tokio-io = "0.1"
unsigned-varint = { version = "0.2.1", features = ["codec"] }
