[package]
name = "susyp2p-tcp"
edition = "2018"
description = "TCP/IP transport protocol for susyp2p"
version = "0.7.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
get_if_addrs = "0.5.3"
susyp2p-core = { version = "0.7.0", path = "../../core" }
log = "0.4.1"
futures = "0.1"
multiaddr = { package = "susy-multiaddr", version = "0.4.0", path = "../../misc/multiaddr" }
tk-listen = "0.2.0"
tokio-io = "0.1"
tokio-tcp = "0.1"

[dev-dependencies]
tokio = "0.1"
