[package]
name = "susyp2p-uds"
edition = "2018"
description = "Unix domain sockets transport for susyp2p"
version = "0.7.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[target.'cfg(all(unix, not(any(target_os = "emscripten", target_os = "unknown"))))'.dependencies]
susyp2p-core = { version = "0.7.0", path = "../../core" }
log = "0.4.1"
futures = "0.1"
multiaddr = { package = "susy-multiaddr", version = "0.4.0", path = "../../misc/multiaddr" }
tokio-uds = "0.2"

[target.'cfg(all(unix, not(any(target_os = "emscripten", target_os = "unknown"))))'.dev-dependencies]
tempfile = "3.0"
tokio = "0.1"
tokio-io = "0.1"
