[package]
name = "susyp2p-websocket"
edition = "2018"
description = "WebSocket transport for susyp2p"
version = "0.7.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "MIT"
repository = "https://github.com/susyp2p/rust-susyp2p"
keywords = ["peer-to-peer", "susyp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
susyp2p-core = { version = "0.7.0", path = "../../core" }
futures = "0.1"
multiaddr = { package = "susy-multiaddr", version = "0.4.0", path = "../../misc/multiaddr" }
log = "0.4.1"
rw-stream-sink = { version = "0.1.1", path = "../../misc/rw-stream-sink" }
tokio-io = "0.1"

[target.'cfg(not(any(target_os = "emscripten", target_os = "unknown")))'.dependencies]
websocket = { version = "0.22.2", default-features = false, features = ["async", "async-ssl"] }

[target.'cfg(any(target_os = "emscripten", target_os = "unknown"))'.dependencies]
stdweb = { version = "0.4", default-features = false }
wasm-bindgen = "0.2.42"

[target.'cfg(not(any(target_os = "emscripten", target_os = "unknown")))'.dev-dependencies]
susyp2p-tcp = { version = "0.7.0", path = "../tcp" }
tokio = "0.1"
